--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,3 @@
-[package]
-name = "space-stt"
-version = "0.1.0"
-edition = "2024"
-
-[features]
-default = []
-cuda = ["whisper-rs/cuda"]
-
-[dependencies]
-anyhow = "1.0.101"
-audioadapter-buffers = "2.0.0"
-cpal = "0.17.3"
-crossbeam-channel = "0.5.15"
-crossterm = "0.29.0"
-ctrlc = { version = "3.5.2", features = ["termination"] }
-evdev = "0.13.2"
-ratatui = "0.30.0"
-rubato = "1.0.1"
-webrtc-vad = "0.4.0"
-whisper-rs = "0.15.1"
+[workspace]
+members = ["common", "client", "server"]
+resolver = "3"
